--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guideposts - Digital Library Card</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Guideposts: Let's GO!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="section" id="track">
+    <h1 class="deck-title"><span>Guideposts:</span><br><small>Let's GO!</small></h1>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
