--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Guideposts: Let's GO!</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="section" id="track">
-    <h1 class="deck-title"><span>Guideposts:</span><br><small>Let's GO!</small></h1>
+  <div class="hero">
+    <h1><span>Guideposts:</span><br><small>Let’s <strong>GO!</strong></small></h1>
+    <div class="cards">
+      <img src="cards/fool.png" class="card center" alt="The Fool" />
+      <img src="cards/hanged.png" class="card left2" alt="The Hanged" />
+      <img src="cards/justice.png" class="card left1" alt="Justice" />
+      <img src="cards/coins.png" class="card right1" alt="5 of Coins" />
+      <img src="cards/magician.png" class="card right2" alt="The Magician" />
+    </div>
+    <p class="intro">Welcome to the Digital Library Card Tracker<br>
+    Follow where the deck has traveled and read the reflections left behind by those who held it.</p>
+    <div class="buttons">
+      <button>What’s This About?</button>
+      <button>Track the Deck</button>
+      <button>Behind the Cards</button>
+      <button>Reader Pages</button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
