--- a/index.html
+++ b/index.html
@@ -2,29 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guideposts: Let's GO!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Guideposts: Let’s GO!</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <div class="hero">
-    <h1><span>Guideposts:</span><br><small>Let’s <strong>GO!</strong></small></h1>
-    <div class="cards">
-      <img src="cards/fool.png" class="card center" alt="The Fool" />
-      <img src="cards/hanged.png" class="card left2" alt="The Hanged" />
-      <img src="cards/justice.png" class="card left1" alt="Justice" />
-      <img src="cards/coins.png" class="card right1" alt="5 of Coins" />
-      <img src="cards/magician.png" class="card right2" alt="The Magician" />
-    </div>
-    <p class="intro">Welcome to the Digital Library Card Tracker<br>
-    Follow where the deck has traveled and read the reflections left behind by those who held it.</p>
-    <div class="buttons">
-      <button>What’s This About?</button>
-      <button>Track the Deck</button>
-      <button>Behind the Cards</button>
-      <button>Reader Pages</button>
-    </div>
-  </div>
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- PASTE BEGINS -->
+  
+  <!-- [This is everything you gave me — it’s already inside the <body>] -->
+  <!-- Keep your HTML exactly as-is below this line -->
+  
+  <!-- Track the Deck Section -->
+  <div id="track" class="section">...etc...</div>
+
+  <!-- HOME SECTION -->
+  <div id="home" class="section active">...etc...</
