--- a/index.html
+++ b/index.html
@@ -7,14 +7,222 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
-<body>
-  <!-- PASTE BEGINS -->
-  
-  <!-- [This is everything you gave me — it’s already inside the <body>] -->
-  <!-- Keep your HTML exactly as-is below this line -->
-  
-  <!-- Track the Deck Section -->
-  <div id="track" class="section">...etc...</div>
+<body><!-- Track the Deck Section -->
+<div id="track" class="section">
+  <h1>Track the Deck</h1>
+  <p class="subtitle">A traveling tarot deck on a journey<br>from reader to reader</p>
 
-  <!-- HOME SECTION -->
-  <div id="home" class="section active">...etc...</
+  <div class="map-container">
+    <img src="https://i.imgur.com/wUpPfCE.png" alt="Map showing Phoenix and route" class="map-image" />
+  </div>
+
+  <button class="button">View Its Journey</button>
+
+  <p class="description">
+    Guideposts is a single physical deck of tarot cards, passed from one set of hands to another.
+    Each recipient spends time with the cards, then sends the deck on its way.
+    Follow the route, and explore the stories it gathers along the way.
+  </p>
+
+  <div class="testimonial">
+    <img src="https://i.imgur.com/5zOaj8M.png" alt="Reader Photo" class="testimonial-photo" />
+    <blockquote>
+      “I was surprised how emotional I felt holding the deck. Each card felt alive with purpose,
+      like it had more to say the longer I listened.”<br><br>
+      <span class="reader-name">– Ashleigh R., Oregon</span>
+    </blockquote>
+  </div>
+
+  <button class="button" onclick="navigateTo('home')">Back</button>
+</div>
+
+<!-- HOME SECTION -->
+<div id="home" class="section active">
+  <div class="hero-title">
+    <h1>Guideposts:</h1>
+    <h2>Let’s <i>GO!</i></h2>
+  </div>
+
+  <img src="https://i.imgur.com/Oh9GY48.png" class="cards" alt="Fanned Tarot Cards" />
+
+  <p class="subtitle">
+    Welcome to the Digital Library Card Tracker<br>
+    Follow where the deck has traveled and read the reflections left behind by those who held it.
+  </p>
+
+  <div class="buttons">
+    <button class="button" onclick="navigateTo('about')">What's This About?</button>
+    <button class="button" onclick="navigateTo('track')">Track the Deck</button>
+    <button class="button" onclick="navigateTo('cards')">Behind the Cards</button>
+    <button class="button" onclick="navigateTo('readers')">Reader Pages</button>
+  </div>
+</div>
+
+<!-- Behind the Cards Section -->
+<div id="cards" class="section">
+  <h1>Behind the Cards</h1>
+  <div class="card-columns">
+    <div class="column">
+      <h2>Major Arcana</h2>
+      <ul class="card-list">
+        <li>The Fool</li>
+        <li><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
+        <li>The High Priestess</li>
+        <li>The Empress</li>
+        <li>The Emperor</li>
+        <li>The Hierophant</li>
+        <li>The Lovers</li>
+        <li>The Chariot</li>
+        <li>Strength</li>
+        <li>The Hermit</li>
+        <li>Wheel of Fortune</li>
+        <li>Justice</li>
+        <li>The Hanged Man</li>
+        <li>Death</li>
+        <li>Temperance</li>
+        <li>The Devil</li>
+        <li>The Tower</li>
+        <li>The Star</li>
+        <li>The Moon</li>
+        <li>The Sun</li>
+        <li>Judgement</li>
+        <li>The World</li>
+      </ul>
+    </div>
+    <div class="column">
+      <h2>Minor Arcana</h2>
+      <ul class="card-list">
+        <li><strong>Cups</strong></li>
+        <li>Ace of Cups</li>
+        <li>Two of Cups</li>
+        <li>Three of Cups</li>
+        <li>Four of Cups</li>
+        <li>Five of Cups</li>
+        <li>Six of Cups</li>
+        <li>Seven of Cups</li>
+        <li>Eight of Cups</li>
+        <li>Nine of Cups</li>
+        <li>Ten of Cups</li>
+        <li>Page of Cups</li>
+        <li>Knight of Cups</li>
+        <li>Queen of Cups</li>
+        <li>King of Cups</li>
+        <li><strong>Swords</strong></li>
+        <li>Ace of Swords</li>
+        <li>Two of Swords</li>
+        <li>Three of Swords</li>
+        <li>Four of Swords</li>
+        <li>Five of Swords</li>
+        <li>Six of Swords</li>
+        <li>Seven of Swords</li>
+        <li>Eight of Swords</li>
+        <li>Nine of Swords</li>
+        <li>Ten of Swords</li>
+        <li>Page of Swords</li>
+        <li>Knight of Swords</li>
+        <li>Queen of Swords</li>
+        <li>King of Swords</li>
+        <li><strong>Wands</strong></li>
+        <li>Ace of Wands</li>
+        <li>Two of Wands</li>
+        <li>Three of Wands</li>
+        <li>Four of Wands</li>
+        <li>Five of Wands</li>
+        <li>Six of Wands</li>
+        <li>Seven of Wands</li>
+        <li>Eight of Wands</li>
+        <li>Nine of Wands</li>
+        <li>Ten of Wands</li>
+        <li>Page of Wands</li>
+        <li>Knight of Wands</li>
+        <li>Queen of Wands</li>
+        <li>King of Wands</li>
+        <li><strong>Pentacles</strong></li>
+        <li>Ace of Pentacles</li>
+        <li>Two of Pentacles</li>
+        <li>Three of Pentacles</li>
+        <li>Four of Pentacles</li>
+        <li>Five of Pentacles</li>
+        <li>Six of Pentacles</li>
+        <li>Seven of Pentacles</li>
+        <li>Eight of Pentacles</li>
+        <li>Nine of Pentacles</li>
+        <li>Ten of Pentacles</li>
+        <li>Page of Pentacles</li>
+        <li>Knight of Pentacles</li>
+        <li>Queen of Pentacles</li>
+        <li>King of Pentacles</li>
+      </ul>
+    </div>
+  </div>
+  <button class="button" onclick="navigateTo('home')">Back</button>
+</div>
+
+<!-- Magician Card Section -->
+<div id="magician" class="section">
+  <h1>The Magician</h1>
+  <div class="card-container">
+    <img class="card-image" src="https://i.imgur.com/uKMR66G.jpeg" alt="The Magician Card" />
+    <div class="card-info">
+      <h2>The Infinite Potential</h2>
+      <p>The heroine of the card is magnetic, brimming with confidence. Her stance with a sword and a magician hat, overseeing transformation, suggests opportunity, motion, and strength.</p>
+
+      <h2>The Tools</h2>
+      <p>Sword: intellect; communication; petals: signify love, cooperation, light; creative energy. She taunts conduit and works with them.</p>
+
+      <h2>The Curtain</h2>
+      <p>The vibrant curtain behind the Magician hints at hidden mystery, greater spiritual power, and connections beyond the present plane.</p>
+
+      <button class="button" onclick="navigateTo('cards')">Back</button>
+    </div>
+  </div>
+</div>
+
+<!-- Reader Pages Section -->
+<div id="readers" class="section">
+  <h1>Reader Pages</h1>
+  <p class="subtitle">
+    This is your space to connect.<br>
+    Each journey leaves a mark — here’s where they’re shared.
+  </p>
+
+  <p class="description">
+    The Digital Library Card Tracker follows the path of our physical decks — from one reader to the next. On these pages, readers leave notes, stories, reflections, and synchronicities. Whether you’re just beginning or handing off the deck to the next soul, this is where your voice joins the chorus.
+  </p>
+
+  <p class="description">
+    Each card read. Each hand held. Each insight shared.<br>
+    Scroll through their pages… and maybe write your own.
+  </p>
+
+  <button class="button" onclick="navigateTo('home')">Back</button>
+</div>
+
+<!-- About Section -->
+<div id="about" class="section">
+  <h1>About This Project</h1>
+  <p>This digital companion was created to accompany a traveling tarot deck, offering a way for readers to record their reflections and follow the deck's path. It is a living, evolving story written by everyone it touches.</p>
+  <button class="button" onclick="navigateTo('home')">Back</button>
+</div>
+
+
+<div id="magician" class="section">
+  <h1>Behind the Cards</h1>
+  <div class="card-container">
+    <img class="card-image" src="https://i.imgur.com/uKMR66G.jpeg" alt="The Magician Card" />
+    <div class="card-info">
+      <h2>The Infinite Potential</h2>
+      <p>The heroine of the card is magnetic, brimming with confidence. Her stance with a sword and a magician hat, overseeing transformation, suggests opportunity, motion, and strength.</p>
+
+      <h2>The Tools</h2>
+      <p>Sword: intellect; communication; petals: signify love, cooperation, light; creative energy. She taunts conduit and works with them.</p>
+
+      <h2>The Curtain</h2>
+      <p>The vibrant curtain behind the Magician hints at hidden mystery, greater spiritual power, and connections beyond the present plane.</p>
+
+      <button class="button" onclick="navigateTo('home')">Back</button>
+    </div>
+  </div>
+</div>
+</body>
+</html>
