--- a/index.html
+++ b/index.html
@@ -168,9 +168,112 @@
 </div>
 
 <!-- CARDS SECTION -->
+<!-- Behind the Cards Section -->
 <div id="cards" class="section">
   <h1>Behind the Cards</h1>
-  <p class="subtitle">Explore the symbolism and creative spirit of each design.</p>
+  <div class="card-columns">
+    <div class="column">
+      <h2>Major Arcana</h2>
+      <ul class="card-list">
+        <li>The Fool</li>
+        <li><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
+        <li>The High Priestess</li>
+        <li>The Empress</li>
+        <li>The Emperor</li>
+        <li>The Hierophant</li>
+        <li>The Lovers</li>
+        <li>The Chariot</li>
+        <li>Strength</li>
+        <li>The Hermit</li>
+        <li>Wheel of Fortune</li>
+        <li>Justice</li>
+        <li>The Hanged Man</li>
+        <li>Death</li>
+        <li>Temperance</li>
+        <li>The Devil</li>
+        <li>The Tower</li>
+        <li>The Star</li>
+        <li>The Moon</li>
+        <li>The Sun</li>
+        <li>Judgement</li>
+        <li>The World</li>
+      </ul>
+    </div>
+
+    <div class="column">
+      <h2>Minor Arcana</h2>
+      <ul class="card-list">
+
+        <li style="margin-top: 2em;"></li>
+        <li><strong>Cups</strong></li>
+        <li>Ace of Cups</li>
+        <li>Two of Cups</li>
+        <li>Three of Cups</li>
+        <li>Four of Cups</li>
+        <li>Five of Cups</li>
+        <li>Six of Cups</li>
+        <li>Seven of Cups</li>
+        <li>Eight of Cups</li>
+        <li>Nine of Cups</li>
+        <li>Ten of Cups</li>
+        <li>Page of Cups</li>
+        <li>Knight of Cups</li>
+        <li>Queen of Cups</li>
+        <li>King of Cups</li>
+
+        <li style="margin-top: 2em;"></li>
+        <li><strong>Swords</strong></li>
+        <li>Ace of Swords</li>
+        <li>Two of Swords</li>
+        <li>Three of Swords</li>
+        <li>Four of Swords</li>
+        <li>Five of Swords</li>
+        <li>Six of Swords</li>
+        <li>Seven of Swords</li>
+        <li>Eight of Swords</li>
+        <li>Nine of Swords</li>
+        <li>Ten of Swords</li>
+        <li>Page of Swords</li>
+        <li>Knight of Swords</li>
+        <li>Queen of Swords</li>
+        <li>King of Swords</li>
+
+        <li style="margin-top: 2em;"></li>
+        <li><strong>Wands</strong></li>
+        <li>Ace of Wands</li>
+        <li>Two of Wands</li>
+        <li>Three of Wands</li>
+        <li>Four of Wands</li>
+        <li>Five of Wands</li>
+        <li>Six of Wands</li>
+        <li>Seven of Wands</li>
+        <li>Eight of Wands</li>
+        <li>Nine of Wands</li>
+        <li>Ten of Wands</li>
+        <li>Page of Wands</li>
+        <li>Knight of Wands</li>
+        <li>Queen of Wands</li>
+        <li>King of Wands</li>
+
+        <li style="margin-top: 2em;"></li>
+        <li><strong>Pentacles</strong></li>
+        <li>Ace of Pentacles</li>
+        <li>Two of Pentacles</li>
+        <li>Three of Pentacles</li>
+        <li>Four of Pentacles</li>
+        <li>Five of Pentacles</li>
+        <li>Six of Pentacles</li>
+        <li>Seven of Pentacles</li>
+        <li>Eight of Pentacles</li>
+        <li>Nine of Pentacles</li>
+        <li>Ten of Pentacles</li>
+        <li>Page of Pentacles</li>
+        <li>Knight of Pentacles</li>
+        <li>Queen of Pentacles</li>
+        <li>King of Pentacles</li>
+      </ul>
+    </div>
+  </div>
   <button class="button" onclick="navigateTo('home')">Back</button>
 </div>
 
