--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <ul class="card-list">
         <li>The Fool</li>
         <li><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
-        <li style="font-size: 1.25rem; font-weight: normal;">The High Priestess</li>
+        <li>The High Priestess</li>
         <li>The Empress</li>
         <li>The Emperor</li>
         <li>The Hierophant</li>
