--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
     <div class="column">
       <h2>Major Arcana</h2>
       <ul class="card-list">
-        <li style="font-size: 1.25rem;>The Fool</li>
-        <li style="font-size: 1.25rem;><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
-        <li style="font-size: 1.25rem;>The High Priestess</li>
+        <li style="font-size: 1.25rem;">The Fool</li>
+        <li style="font-size: 1.25rem;"><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
+        <li style="font-size: 1.25rem;">The High Priestess</li>
         <li>The Empress</li>
         <li>The Emperor</li>
         <li>The Hierophant</li>
