--- a/index.html
+++ b/index.html
@@ -178,25 +178,25 @@
         <li style="font-size: 1.25rem;">The Fool</li>
         <li style="font-size: 1.25rem;"><a href="#" onclick="navigateTo('magician')">The Magician</a></li>
         <li style="font-size: 1.25rem;">The High Priestess</li>
-        <li>The Empress</li>
-        <li>The Emperor</li>
-        <li>The Hierophant</li>
-        <li>The Lovers</li>
-        <li>The Chariot</li>
-        <li>Strength</li>
-        <li>The Hermit</li>
-        <li>Wheel of Fortune</li>
-        <li>Justice</li>
-        <li>The Hanged Man</li>
-        <li>Death</li>
-        <li>Temperance</li>
-        <li>The Devil</li>
-        <li>The Tower</li>
-        <li>The Star</li>
-        <li>The Moon</li>
-        <li>The Sun</li>
-        <li>Judgement</li>
-        <li>The World</li>
+        <li style="font-size: 1.25rem;">The Empress</li>
+        <li style="font-size: 1.25rem;">The Emperor</li>
+        <li style="font-size: 1.25rem;">The Hierophant</li>
+        <li style="font-size: 1.25rem;">The Lovers</li>
+        <li style="font-size: 1.25rem;">The Chariot</li>
+        <li style="font-size: 1.25rem;">Strength</li>
+        <li style="font-size: 1.25rem;">The Hermit</li>
+        <li style="font-size: 1.25rem;">Wheel of Fortune</li>
+        <li style="font-size: 1.25rem;">Justice</li>
+        <li style="font-size: 1.25rem;">The Hanged Man</li>
+        <li style="font-size: 1.25rem;">Death</li>
+        <li style="font-size: 1.25rem;">Temperance</li>
+        <li style="font-size: 1.25rem;">The Devil</li>
+        <li style="font-size: 1.25rem;">The Tower</li>
+        <li style="font-size: 1.25rem;">The Star</li>
+        <li style="font-size: 1.25rem;">The Moon</li>
+        <li style="font-size: 1.25rem;">The Sun</li>
+        <li style="font-size: 1.25rem;">Judgement</li>
+        <li style="font-size: 1.25rem;">The World</li>
       </ul>
     </div>
 
@@ -277,6 +277,26 @@
   <button class="button" onclick="navigateTo('home')">Back</button>
 </div>
 
+<!-- Magician Card Section -->
+<div id="magician" class="section">
+  <h1>The Magician</h1>
+  <div class="card-container">
+    <img class="card-image" src="https://i.imgur.com/uKMR66G.jpeg" alt="The Magician Card" />
+    <div class="card-info">
+      <h2>The Infinite Potential</h2>
+      <p>The heroine of the card is magnetic, brimming with confidence. Her stance with a sword and a magician hat, overseeing transformation, suggests opportunity, motion, and strength.</p>
+
+      <h2>The Tools</h2>
+      <p>Sword: intellect; communication; petals: signify love, cooperation, light; creative energy. She taunts conduit and works with them.</p>
+
+      <h2>The Curtain</h2>
+      <p>The vibrant curtain behind the Magician hints at hidden mystery, greater spiritual power, and connections beyond the present plane.</p>
+
+      <button class="button" onclick="navigateTo('cards')">Back</button>
+    </div>
+  </div>
+</div>
+  
 <!-- READERS SECTION -->
 <div id="readers" class="section">
   <h1>Reader Pages</h1>
