--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     body {
       margin: 0;
       font-family: 'Georgia', serif;
-      background: #0b1222;
+      background-image: url('images/stars.png');
+      background-repeat: repeat;
+      background-size: auto;
       color: #f5f0e1;
       text-align: center;
       padding: 60px 20px;
@@ -148,7 +150,7 @@
   <h1>Track the Deck</h1>
   <p class="subtitle">A traveling tarot deck on a journey<br>from reader to reader</p>
   <div class="map-container">
-    <img src="https://i.imgur.com/wUpPfCE.png" alt="Map showing Phoenix and route" class="map-image" />
+    <img src="tracker703x419.png" alt="Map showing journey" class="map-image" />
   </div>
   <button class="button">View Its Journey</button>
   <p class="description">
