--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     body {
       margin: 0;
       font-family: 'Georgia', serif;
-      background-image: url('images/stars.png');
+      background-color: #0b1222; /* fallback color */
+      background-image: url('stars.png');
       background-repeat: repeat;
       background-size: auto;
       text-align: center;
