--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       background-image: url('stars.png');
       background-repeat: repeat;
       background-size: auto;
+      color: #f5f0e1; /* soft off-white */
       text-align: center;
       padding: 60px 20px;
     }
