--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <div id="about" class="section">
   <h1>About This Project</h1>
   <p>
-    This digital companion was created to accompany a traveling tarot deck, offering a way for readers to record their reflections and follow the deck's path. It is a living, evolving story written by everyone it touches.
+    This digital companion was created to accompany a traveling tarot deck, offering a way for readers to record their</b>reflections and follow the deck's path. It is a living, evolving story written by everyone it touches.
   </p>
   <button class="button" onclick="navigateTo('home')">Back</button>
 </div>
