--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Guideposts: Let’s GO!</title>
+  <title>The Traveling Decks: GUIDEPOSTS</title>
   <link rel="stylesheet" href="style.css" />
   <script>
     function navigateTo(id) {
@@ -130,8 +130,8 @@
 <!-- HOME SECTION -->
 <div id="home" class="section active">
   <div class="hero-title">
-    <h1>Guideposts:</h1>
-    <h2>Let’s <i>GO!</i></h2>
+    <h2>The Traveling Decks</h2>
+    <h1>Guideposts</h1>
   </div>
   <img src="https://i.imgur.com/Oh9GY48.png" class="cards" alt="Fanned Tarot Cards" />
   <p class="subtitle">
