--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <!-- HOME SECTION -->
 <div id="home" class="section active">
   <div class="hero-title">
-    <h2>The Traveling Decks</h2>
+    <h4><i></i>The Traveling Decks</i></h4>
     <h1>Guideposts</h1>
   </div>
   <img src="https://i.imgur.com/Oh9GY48.png" class="cards" alt="Fanned Tarot Cards" />
