--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       font-size: 3rem;
       margin: 0;
     }
-    .hero-title h2 {
-      font-size: 2rem;
+    .hero-title h4 {
+      font-size: 1rem;
       font-weight: normal;
-      margin: 0.2em 0 1em 0;
+      margin: 0.2em 0 .2em 0;
     }
     .cards {
       width: 80%;
