--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
 
 <!-- TRACK SECTION -->
 <div id="track" class="section">
+  <div class="hero-title">
+    <h4><i></i>The Traveling Decks</i></h4>
+    <h1>Guideposts</h1>
+  </div>
   <h1>Track the Deck</h1>
   <p class="subtitle">A traveling tarot deck on a journey<br>from reader to reader</p>
   <div class="map-container">
