--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
 <!-- CARDS SECTION -->
 <!-- Behind the Cards Section -->
 <div id="cards" class="section">
+  <div id="track" class="section">
+  <div class="hero-title">
+    <h4><i></i>The Traveling Decks</i></h4>
+    <h1>Guideposts</h1>
+    </p><hr></p>
+  </div>
   <h1>Behind the Cards</h1>
   <div class="card-columns">
     <div class="column">
@@ -287,6 +293,12 @@
 
 <!-- Magician Card Section -->
 <div id="magician" class="section">
+  <div id="track" class="section">
+  <div class="hero-title">
+    <h4><i></i>The Traveling Decks</i></h4>
+    <h1>Guideposts</h1>
+    </p><hr></p>
+  </div>
   <h1>The Magician</h1>
   <div class="card-container">
     <img class="card-image" src="https://i.imgur.com/uKMR66G.jpeg" alt="The Magician Card" />
@@ -307,6 +319,12 @@
   
 <!-- READERS SECTION -->
 <div id="readers" class="section">
+  <div id="track" class="section">
+  <div class="hero-title">
+    <h4><i></i>The Traveling Decks</i></h4>
+    <h1>Guideposts</h1>
+    </p><hr></p>
+  </div>
   <h1>Reader Pages</h1>
   <p class="subtitle">
     This is your space to connect.<br>
@@ -325,6 +343,12 @@
 
 <!-- ABOUT SECTION -->
 <div id="about" class="section">
+  <div id="track" class="section">
+  <div class="hero-title">
+    <h4><i></i>The Traveling Decks</i></h4>
+    <h1>Guideposts</h1>
+    </p><hr></p>
+  </div>
   <h1>About This Project</h1>
   <p>
     This digital companion was created to accompany a traveling tarot deck, offering a way for readers to record their</br>reflections and follow the deck's path. It is a living, evolving story written by everyone it touches.
