--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
 <!-- TRACK SECTION -->
 <div id="track" class="section">
-  <div class="hero-title">
-    <h4><i></i>The Traveling Decks</i></h4>
-    <h1>Guideposts</h1>
-    </p><hr></p>
-  </div>
+      <div class="hero-title">
+      <h4><i>The Traveling Decks</i></h4>
+      <h1>Guideposts</h1>
+      <p><hr></p>
+      </div>
   <h1>Track the Deck</h1>
   <p class="subtitle">A traveling tarot deck on a journey<br>from reader to reader</p>
   <div class="map-container">
@@ -179,11 +179,11 @@
 <!-- Behind the Cards Section -->
 <div id="cards" class="section">
   <div id="track" class="section">
-  <div class="hero-title">
-    <h4><i></i>The Traveling Decks</i></h4>
-    <h1>Guideposts</h1>
-    </p><hr></p>
-  </div>
+      <div class="hero-title">
+      <h4><i>The Traveling Decks</i></h4>
+      <h1>Guideposts</h1>
+      <p><hr></p>
+      </div>
   <h1>Behind the Cards</h1>
   <div class="card-columns">
     <div class="column">
@@ -294,11 +294,11 @@
 <!-- Magician Card Section -->
 <div id="magician" class="section">
   <div id="track" class="section">
-  <div class="hero-title">
-    <h4><i></i>The Traveling Decks</i></h4>
-    <h1>Guideposts</h1>
-    </p><hr></p>
-  </div>
+      <div class="hero-title">
+      <h4><i>The Traveling Decks</i></h4>
+      <h1>Guideposts</h1>
+      <p><hr></p>
+      </div>
   <h1>The Magician</h1>
   <div class="card-container">
     <img class="card-image" src="https://i.imgur.com/uKMR66G.jpeg" alt="The Magician Card" />
@@ -319,12 +319,11 @@
   
 <!-- READERS SECTION -->
 <div id="readers" class="section">
-  <div id="track" class="section">
-  <div class="hero-title">
-    <h4><i></i>The Traveling Decks</i></h4>
-    <h1>Guideposts</h1>
-    </p><hr></p>
-  </div>
+      <div class="hero-title">
+      <h4><i>The Traveling Decks</i></h4>
+      <h1>Guideposts</h1>
+      <p><hr></p>
+      </div>
   <h1>Reader Pages</h1>
   <p class="subtitle">
     This is your space to connect.<br>
@@ -343,12 +342,11 @@
 
 <!-- ABOUT SECTION -->
 <div id="about" class="section">
-  <div id="track" class="section">
-  <div class="hero-title">
-    <h4><i></i>The Traveling Decks</i></h4>
-    <h1>Guideposts</h1>
-    </p><hr></p>
-  </div>
+      <div class="hero-title">
+      <h4><i>The Traveling Decks</i></h4>
+      <h1>Guideposts</h1>
+      <p><hr></p>
+      </div>
   <h1>About This Project</h1>
   <p>
     This digital companion was created to accompany a traveling tarot deck, offering a way for readers to record their</br>reflections and follow the deck's path. It is a living, evolving story written by everyone it touches.
