--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <!-- TRACK SECTION -->
 <div id="track" class="section">
       <div class="hero-title">
-      <h4><i>The Traveling Decks</i></h4>
+      <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
       <p><hr></p>
       </div>
