--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="hero-title">
       <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
-      <hr><p>•</p>
+      <hr margin-bottom: 40px;>
       </div>
   <h1>Track the Deck</h1>
   <p class="subtitle">A traveling tarot deck on a journey<br>from reader to reader</p>
