--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
 <!-- Behind the Cards Section -->
 <div id="cards" class="section">
       <div class="hero-title">
-      <h4><i>The Traveling Decks</i></h4>
+      <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
-      <p><hr></p>
+      <hr>
+        <p>.</p>
       </div>
   <h1>Behind the Cards</h1>
   <div class="card-columns">
@@ -294,9 +295,10 @@
 <!-- Magician Card Section -->
 <div id="magician" class="section">
       <div class="hero-title">
-      <h4><i>The Traveling Decks</i></h4>
+      <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
-      <p><hr></p>
+      <hr>
+        <p>.</p>
       </div>
   <h1>The Magician</h1>
   <div class="card-container">
@@ -319,9 +321,10 @@
 <!-- READERS SECTION -->
 <div id="readers" class="section">
       <div class="hero-title">
-      <h4><i>The Traveling Decks</i></h4>
+      <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
-      <p><hr></p>
+      <hr>
+        <p>.</p>
       </div>
   <h1>Reader Pages</h1>
   <p class="subtitle">
@@ -342,9 +345,10 @@
 <!-- ABOUT SECTION -->
 <div id="about" class="section">
       <div class="hero-title">
-      <h4><i>The Traveling Decks</i></h4>
+      <h4>The Traveling Decks</h4>
       <h1>Guideposts</h1>
-      <p><hr></p>
+      <hr>
+        <p>.</p>
       </div>
   <h1>About This Project</h1>
   <p>
