--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       <h2>The Curtain</h2>
       <p>The vibrant curtain behind the Magician hints at hidden mystery, greater spiritual power, and connections beyond the present plane.</p>
 
-      <button class="button" onclick="navigateTo('cards')">Back</button>
+      <button class="button" onclick="navigateTo('cards')">Back to Cards</button>
     </div>
   </div>
 </div>
