--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
       font-weight: normal;
       margin: 0.2em 0 .2em 0;
     }
+        hr {
+        border: 6px dotted #ff0000;
+        border-style: none none dotted; 
+        color: #fff; 
+        background-color: #fff;
+    }
     .cards {
       width: 80%;
       max-width: 500px;
