--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       margin: 0.2em 0 .2em 0;
     }
         hr {
-        border: 6px dotted #ff0000;
+        border: 2px dotted #ff0000;
         border-style: none none dotted; 
         color: #fff; 
-        background-color: #fff;
+        background-color: #000;
     }
     .cards {
       width: 80%;
