--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Traveling Decks: GUIDEPOSTS</title>
+  <title>Tarot Passport: GUIDEPOSTS</title>
   <link rel="stylesheet" href="style.css" />
   <script>
     function navigateTo(id) {
