--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <!-- HOME SECTION -->
 <div id="home" class="section active">
   <div class="hero-title">
-    <h4><i></i>a Tarot Passport deck</i></h4>
+    <h4><i></i>A Tarot Passport Deck</i></h4>
     <h1>Guideposts</h1>
   </div>
   <img src="https://i.imgur.com/Oh9GY48.png" class="cards" alt="Fanned Tarot Cards" />
